<resources>

    //VALORES DE LOGIN
    <string name="app_name">Semana09DPAFirebase</string>
    <string name="valbtnlogin">LOGIN</string>
    <string name="valbtnregister">REGISTER</string>
    <string name="valtxtEmail">Email</string>
    <string name="valtxtPassword">Password\n</string>

    //VALORES DE REGISTER
    <string name="title_register">Register</string>

    //VALORES DE REGISTER
    <string name="valetfullname">Full Name</string>
    <string name="valetcountryr">Country</string>
    <string name="valetemail">Email</string>
    <string name="valetpassword">Password</string>
    <string name="valbtnsaveregister">SAVE</string>
    <string name="title_activity_pricipal">PricipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>